# screen-manager

./: .gitignore  .mcp.json  LICENSE  Makefile  README.md  pyproject.toml
docs/from_agents/: CIPDB_AND_SCREEN_MANAGER_DEBUGGING.md
docs/from_user/: CONDITIONAL_IPDB.md  FOR_SIMULTANEOUS_IPDB_DEBUGGING.md  MCP_TMUX_VS_OUR_CONDITIONAL_IPDB_AND_SCREEN_APPROACH.md  OUR_CURRENT_NOT_WORKING_DEBUGGENG_AGENT_RECIPE.md
docs/references/: emacs_ipython_server.py
examples/: debug_session_demo.py  prompt_detection_example.py  script_with_cipdb.py
src/screen_manager/: ScreenSessionManager.py  __init__.py  agent_id_detection.py  mcp_server.py
src/screen_session_manager/: __main__.py  __version__.py  cli.py  mcp_server.py  prompt_detection.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_cipdb.py  test_commands.sh  test_debug.py  test_mcp_server.py  test_new_methods.py  test_performance.py  test_python.py  test_python_session.py  test_send_commands.py  test_send_from_file.py  test_state_detection.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: test_end_to_end.py
tests/mocks/: __init__.py  screen_mock.py
tests/reports/: coverage.json
tests/unit/: test_cipdb.py  test_cipdb_integration.py  test_cli.py  test_mcp_server.py  test_screen_session_manager.py
